--- a/src/features/video/components/video.component.html
+++ b/src/features/video/components/video.component.html
@@ -1,30 +1,54 @@
 <div class="video">
-  <video width="200" height="auto" controls>
-    <source [src]="videoPath" type="video/mp4">
+  <video width="200" height="auto" controls (loadedmetadata)="onMetadataLoaded($event)">
+    <source [src]="videoPath" type="video/mp4" />
     Ваш браузер не поддерживает видео тег.
   </video>
 
   <div class="video-text">
     <div class="video-text_data">
-      <span [orgText]="{
+      <span
+        [orgText]="{
         ENG: 'Date of download: ',
         ESP: 'Date of download: ',
         RUS: 'Дата загрузки: ',
-      }">Date of download: </span>
-      <p>25.12.2026</p>
+      }"
+        >Date of download:
+      </span>
+      <p>{{ videoDate }}</p>
     </div>
     <div class="video-text_duration">
-      <span [orgText]="{
+      <span
+        [orgText]="{
         ENG: 'Duration: ',
         ESP: 'Duration: ',
         RUS: 'Продолжительность: ',
-      }">Duration: </span>
-      <p>1m. 27s.</p>
+      }"
+        >Duration:
+      </span>
+      <p>{{ videoDuration }}</p>
     </div>
-    <button class="video-text_download btn-primary" [orgText]="{
+    <button
+      class="video-text_download btn-primary"
+      [orgText]="{
       ENG: 'Download',
       ESP: 'Download',
       RUS: 'Загрузить',
-    }">Загрузить</button>
+    }"
+    >
+      Загрузить
+    </button>
+
+    @if (isOwn) {
+    <button
+      class="video-text_delete btn-err"
+      [orgText]="{
+        ENG: 'Delete',
+        ESP: 'Eliminar',
+        RUS: 'Удалить',
+      }"
+    >
+      Удалить
+    </button>
+    }
   </div>
 </div>
