--- a/src/pages/profile/components/profile.component.scss
+++ b/src/pages/profile/components/profile.component.scss
@@ -14,7 +14,7 @@
   min-height: 86dvh;
   margin-bottom: 2dvh;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 24px;
   @include w-mobile {
     padding: 16px;
   }
@@ -47,7 +47,7 @@
       min-width: 80px;
       width: 80px;
       height: 80px;
-      transition: .3s;
+      transition: 0.3s;
 
       img {
         width: 100%;
@@ -61,15 +61,11 @@
     }
 
     &_data {
-      
       &--name {
-
       }
       &--email {
-
       }
       &--tarif {
-
       }
     }
 
@@ -77,30 +73,28 @@
       margin-left: auto;
 
       &--record {
-
       }
 
-      &--settings {
-        display: flex;
-        height: 40px;
-        background: none;
-        border: none;
-        margin-left: auto;
-        @include unselectable;
-        cursor: pointer;
-        
-  
-        img {
-          display: block;
-          width: 25px;
-          height: 25px;
-          transition: .6s;
-        }
-  
-        &:hover img {
-          transform: rotate(45deg);
-        }
-      }
+      // &--settings {
+      //   display: flex;
+      //   height: 40px;
+      //   background: none;
+      //   border: none;
+      //   margin-left: auto;
+      //   @include unselectable;
+      //   cursor: pointer;
+
+      //   img {
+      //     display: block;
+      //     width: 25px;
+      //     height: 25px;
+      //     transition: 0.6s;
+      //   }
+
+      //   &:hover img {
+      //     transform: rotate(45deg);
+      //   }
+      // }
     }
 
     &_capture {
@@ -119,41 +113,40 @@
       display: flex;
       flex-direction: column;
       min-width: 200px;
-      margin: 10px 0;
+      margin: 7px 0;
 
       &--arrow {
         display: none;
       }
 
       button {
-        @include fszP(18px,18px);
+        @include fszP(18px, 18px);
         background-color: transparent;
         border: none;
         text-align: left;
         padding: 8px;
-        border-radius: 5px 0 0 5px; 
+        border-radius: 5px 0 0 5px;
         box-sizing: border-box;
         transition: 0s;
         cursor: pointer;
 
         &.active {
-          background-color: $transparent-grey;
+          box-shadow: inset 4px -5px 5px -5px, inset 0px 5px 5px -5px, 1px 0px 0px white;
         }
 
         &:hover:not(.active) {
-          border-left: 3px solid $transparent-grey;
-          transform: translateX(-3px);
+          box-shadow: inset 2px 0px 0px 0px;
         }
       }
     }
-    
+
     &_sections {
       min-height: calc(86dvh - 160px);
       width: 100%;
       border-left: 1px solid $transparent-grey;
+      border-radius: 0px 0px 0px 8px;
     }
   }
-  
 }
 
 .--mobile {
@@ -161,19 +154,14 @@
     border: none;
     box-shadow: none;
 
-
     &-header {
-
       &_data {
         margin-right: 5px;
         &--name {
-  
         }
         &--email {
-  
         }
         &--tarif {
-  
         }
       }
     }
@@ -192,12 +180,12 @@
           right: 20px;
           height: 8px;
           width: 8px;
-          transition: .3s;
+          transition: 0.3s;
           transform-origin: 0% 33%;
           transform: rotateX(180deg);
-  
+
           &:after {
-            content: "";
+            content: '';
             display: block;
             height: 8px;
             width: 8px;
@@ -212,11 +200,11 @@
           height: 45px;
           border-radius: 5px;
           text-align: center;
-          transition: .2s;
+          transition: 0.2s;
           @include fszV(3, 18);
 
           -webkit-tap-highlight-color: transparent; /* Для iOS Safari */
-          
+
           &.active {
             background-color: transparent;
           }
@@ -227,9 +215,9 @@
           }
 
           &:not(.active) {
-              height: 0px;
-              padding: 0 8px;
-              overflow: hidden;
+            height: 0px;
+            padding: 0 8px;
+            overflow: hidden;
           }
         }
       }
@@ -249,8 +237,8 @@
             }
           }
         }
-  
-        .profile-body_menu--arrow  {
+
+        .profile-body_menu--arrow {
           transform: rotateX(0);
         }
       }
@@ -259,7 +247,7 @@
         min-height: calc(86dvh - 160px);
         padding-left: 0;
         border-left: none;
-        border-top:1px solid $transparent-grey;
+        border-top: 1px solid $transparent-grey;
       }
     }
   }
