--- a/src/features/video/components/video.component.scss
+++ b/src/features/video/components/video.component.scss
@@ -2,7 +2,6 @@
 
 :host {
   display: block;
-  width: 100%;
 }
 
 .video {
@@ -36,6 +35,10 @@
 
     &_download {
       margin-top: 15px;
+    }
+
+    &_delete {
+      margin-left: 10px;
     }
   }
 }
