--- a/src/pages/main/components/main.component.scss
+++ b/src/pages/main/components/main.component.scss
@@ -32,11 +32,10 @@
     height: 4dvh;
     color: $prime-blue;
 
-
     span {
       @include fszV(2.5);
       font-weight: 500;
-      
+
       &.grey {
         color: $text-color;
       }
@@ -61,7 +60,7 @@
       color: $prime-blue;
       width: 100%;
       max-width: 900px;
-      padding-left: 16px;
+      padding-left: 24px;
       margin: 0;
 
       b {
@@ -70,22 +69,22 @@
       }
 
       span {
-        font-size: 20px;
+        font-size: 22px;
         font-weight: bold;
       }
     }
 
     &_text {
       color: $white;
-      @include fszV(2, 16);
-      padding: 16px;
+      @include fszV(2.2, 18);
+      padding: 24px;
     }
 
     .benefits-title {
-      font-size: 20px;
+      font-size: 22px;
       color: white;
       margin-bottom: 0;
-      padding: 0 16px;
+      padding: 0 24px;
       margin-top: 40px;
     }
   }
@@ -103,24 +102,61 @@
       flex-wrap: wrap;
       padding: 16px;
 
+      .--open {
+        .benefits-item {
+          &_text {
+            max-height: 0;
+          }
+        }
+
+        .arrow {
+          transform: rotate(45deg);
+        }
+      }
+
       &-item {
-        width: 40%;
+        width: 47%;
         margin-bottom: 30px;
-        transition: .2s;
+        transition: 0.2s;
         padding: 10px;
-        
+
+        .arrow {
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          min-width: 10px;
+          margin-right: 7%;
+          border: solid black;
+          border-width: 0 2px 2px 0;
+          transform: rotate(-135deg);
+          transition: transform 0.3s ease-in-out;
+        }
+
         @include w-mobile {
           width: 100%;
           padding: 0;
         }
 
         &_title {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
           margin-bottom: 10px;
-          font-size: 20px;
+          font-size: 22px;
+
+          h3 {
+            width: 85%;
+            margin-right: 10px;
+            font-size: 22px;
+            font-weight: normal;
+          }
         }
 
         &_text {
-          @include fszV(2, 16);
+          @include fszV(2.2, 18);
+          max-height: 500px;
+          overflow: hidden;
+          transition: 0.4s;
         }
 
         img {
@@ -133,10 +169,10 @@
     }
 
     .features-title {
-      font-size: 20px;
+      font-size: 22px;
       color: $prime-grey;
       margin: 0;
-      padding: 0 16px;
+      padding: 0 24px;
     }
   }
 
@@ -144,14 +180,19 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background: $transparent-grey;
+    background-image: linear-gradient(to right, #e2e2e2 1px, transparent 1px),
+      linear-gradient(to bottom, $transparent-grey 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-color: #fff;
+    box-shadow: inset 5px 10px 5px $transparent-grey, inset -5px 0px 5px $transparent-grey;
     display: flex;
 
     .features {
       &-text {
-        padding: 16px;
-        color: white;
-        border-top: 1px solid white;
+        padding: 24px;
+        font-size: 18px;
+        line-height: 20px;
+        padding: 20px 24px;
       }
 
       &-text:first-child {
@@ -163,9 +204,10 @@
       color: $text-color;
       width: 100%;
       max-width: 900px;
-      padding: 0 16px;
+      padding: 0 24px;
       margin: 0;
-      margin-top: 40px;
+      margin-top: 34px;
+      line-height: 36px;
     }
   }
 
@@ -174,13 +216,12 @@
     background: $white;
     width: 100%;
 
-
     .world {
       &-text {
         color: $text-color;
         width: 100%;
         max-width: 900px;
-        padding: 16px;
+        padding: 24px;
         margin: 0;
       }
     }
