--- a/src/pages/registration/components/registration.component.html
+++ b/src/pages/registration/components/registration.component.html
@@ -2,72 +2,111 @@
 
 <div class="wrapper">
   <div class="container">
-    <h2 [orgText]="{
+    <h2
+      [orgText]="{
       ENG: 'Registration',
       ESP: 'Ddfsrdы',
       RUS: 'Регистрация',
-    }">Registration</h2>
+    }"
+    >
+      Registration
+    </h2>
 
     <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()">
       <div class="form-group">
-        <label for="name" [orgText]="{
+        <label
+          for="name"
+          [orgText]="{
           ENG: 'Username:',
           ESP: 'Ddfsrd:',
           RUS: 'Логин:',
-        }">Username:</label>
-        <input type="text" id="name" formControlName="name" autocomplete="current-name"
-          [class.validation-error]="isValidControl('name')">
-          @if (isValidControl('name')) {
-            <p class="error-message">{{getErrorMessage('name')}}</p>
-          }
+        }"
+          >Username:</label
+        >
+        <input type="text" id="name" formControlName="name" autocomplete="current-name" [class.validation-error]="isValidControl('name')" />
+        @if (isValidControl('name')) {
+        <p class="error-message">{{ getErrorMessage('name') }}</p>
+        }
       </div>
 
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" id="email" formControlName="email" #emailInput
-          [class.validation-error]="isValidControl('email')">
-          @if (isValidControl('email')) {
-            <p class="error-message">{{getErrorMessage('email')}}</p>
-          }
+        <input type="email" id="email" formControlName="email" #emailInput [class.validation-error]="isValidControl('email')" />
+        @if (isValidControl('email')) {
+        <p class="error-message">{{ getErrorMessage('email') }}</p>
+        }
       </div>
 
       <div class="form-group">
-        <label for="password" [orgText]="{
+        <label
+          for="password"
+          [orgText]="{
           ENG: 'Password (min: 6):',
           ESP: ' (min: 6):',
           RUS: 'Пароль (минимум: 6):',
-        }">Password (min: 6):</label>
-        <input type="password" id="password" formControlName="password" autocomplete="current-password"
-          [class.validation-error]="isValidControl('password')">
-          @if (isValidControl('password')) {
-            <p class="error-message">{{getErrorMessage('password')}}</p>
-          }
+        }"
+          >Password (min: 6):</label
+        >
+        <input
+          type="password"
+          id="password"
+          formControlName="password"
+          autocomplete="current-password"
+          [class.validation-error]="isValidControl('password')"
+        />
+        @if (isValidControl('password')) {
+        <p class="error-message">{{ getErrorMessage('password') }}</p>
+        }
       </div>
 
       <div class="form-check">
-        <input type="checkbox" id="agreement" formControlName="agreement">
-        <label class="form-check-label" for="agreement" [orgText]="{
+        <input type="checkbox" id="agreement" formControlName="agreement" />
+        <label
+          class="form-check-label"
+          for="agreement"
+          [orgText]="{
           ENG: 'I agree to the terms and conditions',
           ESP: '',
           RUS: 'Согласен с условиями договора',
-        }">I agree to the 
-        <button>terms and conditions</button>
+        }"
+          >I agree to the
+          <button>terms and conditions</button>
         </label>
         @if (isValidControl('agreement')) {
-          <p class="error-message" [orgText]="{
+        <p
+          class="error-message"
+          [orgText]="{
               ENG: 'Agreement is required.',
               ESP: '',
               RUS: 'Соглашение обязательно',
-          }">Agreement is required.</p>
+          }"
+        >
+          Agreement is required.
+        </p>
         }
       </div>
-      <button type="submit" class="btn btn-primary"
+      <button
+        type="submit"
+        class="btn btn-primary"
         [orgText]="{
           ENG: 'Register',
           ESP: '',
           RUS: 'Регистрация',
-        }">Register
+        }"
+      >
+        Register
       </button>
     </form>
+
+    <buttnon
+      class="--go-auth"
+      [routerLink]="'/auth'"
+      [orgText]="{
+      ENG: 'Authorization',
+      ESP: 'Authorization',
+      RUS: 'Авторизация',
+    }"
+      >Authorization
+    </buttnon>
   </div>
 </div>
