--- a/src/pages/settings/components/settings.component.html
+++ b/src/pages/settings/components/settings.component.html
@@ -1,86 +1,115 @@
 <org-header></org-header>
 
 <div class="settings container">
-  <h2 [orgText]="{
+  <h2
+    [orgText]="{
     ENG: 'Profile settings',
     ESP: 'Configuración de perfil',
     RUS: 'Настройки профиля',
-  }">Profile settings</h2>
-  
+  }"
+  >
+    Profile settings
+  </h2>
 
   <div class="settings-avatar">
     <div class="settings-avatar_image">
       @if ((userData$ | async)?.image) {
-        <img [src]="(userData$ | async)?.image" class="--avatar" (click)="imageModal.show()">
-        <org-image-modal #imageModal [imageUrl]="(userData$ | async)?.image"></org-image-modal>
+      <img [src]="(userData$ | async)?.image" class="--avatar" (click)="imageModal.show()" />
+      <org-image-modal #imageModal [imageUrl]="(userData$ | async)?.image"></org-image-modal>
+      } @else { @if (image) {
+      <img [src]="image" />
       } @else {
-        @if (image) {
-          <img [src]="image"/>
-        } @else {
-          <img [srcPath]="'camera.svg'"/>
-        }
-      }
+      <img [srcPath]="'camera.svg'" />
+      } }
     </div>
 
     <div class="settings-upload">
-      <input type="file" #fileInput hidden (change)="onFileSelected($event)">
+      <input type="file" #fileInput hidden (change)="onFileSelected($event)" />
 
       @if ((userData$ | async)?.image || image) {
-        <button (click)="triggerFileInput()" class="btn-secondary" [orgText]="{
+      <button
+        (click)="triggerFileInput()"
+        class="btn-secondary"
+        [orgText]="{
           ENG: 'Change avatar',
           ESP: 'Cambiar avatar',
           RUS: 'Изменить аватарку',
-        }">Change avatar</button>
+        }"
+      >
+        Change avatar
+      </button>
       } @else {
-        <button (click)="triggerFileInput()" class="btn-secondary" [orgText]="{
+      <button
+        (click)="triggerFileInput()"
+        class="btn-secondary"
+        [orgText]="{
           ENG: 'Add avatar',
           ESP: 'Agregar avatar',
           RUS: 'Добавить аватарку',
-        }">Add avatar</button>
+        }"
+      >
+        Add avatar
+      </button>
       }
     </div>
   </div>
 
-  <div class="settings-login">
-    <p [orgText]="{
+  <div class="settings-login --shadow">
+    <p
+      [orgText]="{
       ENG: 'Change your login:',
       ESP: 'Cambia tu inicio de sesión:',
       RUS: 'Изменить логин:',
-    }">Change your login:</p>
-    <input type="text" value="Fred Gad">
-    <img class="--pencil" [srcPath]="'pencil-edit.svg'">
+    }"
+    >
+      Change your login:
+    </p>
+    <input type="text" value="Fred Gad" />
+    <img class="--pencil" [srcPath]="'pencil-edit.svg'" />
   </div>
 
-  <div class="settings-email">
-    <p [orgText]="{
+  <div class="settings-email --shadow">
+    <p
+      [orgText]="{
       ENG: 'Change your email:',
       ESP: 'Cambia tu correo electrónico:',
       RUS: 'Изменить email:',
-    }">Change your email:</p>
-    <input type="text" value="fred11@mail.ru">
-    <img class="--pencil" [srcPath]="'pencil-edit.svg'">
+    }"
+    >
+      Change your email:
+    </p>
+    <input type="text" value="fred11@mail.ru" />
+    <img class="--pencil" [srcPath]="'pencil-edit.svg'" />
   </div>
 
-  <div class="settings-password">
-    <p [orgText]="{
+  <div class="settings-password --shadow">
+    <p
+      [orgText]="{
       ENG: 'Change your password:',
       ESP: 'Cambia tu inicio de sesión:',
       RUS: 'Изменить пароль:',
-    }">Change your password:</p>
-    <input type="password" value="214ывфып123">
+    }"
+    >
+      Change your password:
+    </p>
+    <input type="password" value="214ывфып123" />
 
-    <img class="--pencil" [srcPath]="'pencil-edit.svg'">
+    <img class="--pencil" [srcPath]="'pencil-edit.svg'" />
   </div>
 
-
   <div class="settings-logout">
-    <button (click)="logout()" class="btn-err" [orgText]="{
+    <button
+      (click)="logout()"
+      class="btn-err"
+      [orgText]="{
       ENG: 'Logout',
       ESP: 'Salir',
       RUS: 'Выйти из аккаунта',
-    }">Выйти из аккаунта</button>
+    }"
+    >
+      Выйти из аккаунта
+    </button>
   </div>
-
 </div>
 
 <org-footer></org-footer>
