--- a/src/pages/trusted-profile/components/trusted-profile.component.scss
+++ b/src/pages/trusted-profile/components/trusted-profile.component.scss
@@ -9,7 +9,6 @@
 
 .wrapper {
   min-height: calc(100dvh - 24px);
-
 }
 
 .trusted {
@@ -19,7 +18,7 @@
   min-height: 86dvh;
   margin-bottom: 2dvh;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 24px;
   @include org-border;
   @include w-mobile {
     padding: 16px;
@@ -40,6 +39,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
       background-color: $transparent-grey;
       margin-right: 30px;
       @include unselectable;
@@ -50,13 +53,22 @@
       min-width: 80px;
       width: 80px;
       height: 80px;
-      transition: .3s;
+      transition: 0.3s;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 
   &-body {
     &_buttons {
-
       button {
         height: 45px;
         width: 50%;
@@ -74,6 +86,5 @@
         border-right: 1px solid $transparent-grey !important;
       }
     }
-  
   }
 }
