--- a/src/widgets/video-block/components/video-block.component.scss
+++ b/src/widgets/video-block/components/video-block.component.scss
@@ -1,11 +1,24 @@
 @import 'mixins';
 
 .saved-videos {
+  box-shadow: inset 4px -5px 5px -5px, inset 0px 5px 5px -5px;
+  border-radius: 8px;
+  height: 100dvh;
+  max-height: 65dvh;
+  overflow: auto;
+
   org-video {
-    display: grid;
+    // display: grid;
+    display: flex;
+    flex-direction: row;
+    border: 1px solid grey;
+    border-radius: 16px;
+
+    margin: 8px;
+    padding: 8px;
 
     &:nth-child(odd) {
-      background: $super-transparent-grey;
+      // background: $super-transparent-grey;
     }
   }
 }
